News UAT/force-app/main/default/objects/Account/fields/ABN_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>ABN_Exempt_Reason__c</fullName>
    <label>ABN Exempt Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Party (less than $75k turnover)</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Overseas Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>