News UAT/force-app/main/default/objects/Account/fields/ABN_Link__c.field-meta.xml
<CustomField>
    <fullName>ABN_Link__c</fullName>
    <formula>IF(
ISBLANK(AccountNumber),
&#39;&#39;,
HYPERLINK(&quot;http://www.abr.business.gov.au/SearchByAbn.aspx?SearchText=&quot;
+ AccountNumber, AccountNumber)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Look up the ABN in the website www.abr.business.gov.au.

You must provide an ABN number first</inlineHelpText>
    <label>ABN Link</label>
    <type>Text</type>
</CustomField>