News UAT/force-app/main/default/objects/Account/fields/ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status__c</fullName>
    <label>ABN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>