News UAT/force-app/main/default/objects/Account/fields/ABN_Validation__c.field-meta.xml
<CustomField>
    <fullName>ABN_Validation__c</fullName>
    <label>ABN Validation</label>
    <type>Date</type>
</CustomField>