News UAT/force-app/main/default/objects/Account/fields/Account_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Modified__c</fullName>
    <description>timestamp when TCS or TAS or Parent has been changed</description>
    <label>Account Last Modified</label>
    <type>DateTime</type>
</CustomField>