News UAT/force-app/main/default/objects/Account/fields/Account_Po1__c.field-meta.xml
<CustomField>
    <fullName>Account_Po1__c</fullName>
    <description>This field enables a summary value in reporting to show the &#39;number of&#39; records not available by default. E.g. The number of Account Owners.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field enables a summary value in reporting to show the &#39;number of&#39; records not available by default. E.g. The number of Account Owners.</inlineHelpText>
    <label>Account Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>