News UAT/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency - Full Service</fullName>
            </value>
            <value>
                <fullName>Agency - Media Buyer</fullName>
            </value>
            <value>
                <fullName>Agency – Overseas Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>Private Party</fullName>
            </value>
            <value>
                <fullName>Consortium</fullName>
            </value>
            <value>
                <fullName>Agency Independent</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Sole Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>