News UAT/force-app/main/default/objects/Account/fields/Accredited__c.field-meta.xml
<CustomField>
    <fullName>Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accredited</label>
    <type>Checkbox</type>
</CustomField>