News UAT/force-app/main/default/objects/Account/fields/Acct_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Acct_Alert_Status__c</fullName>
    <formula>IF( (Count_Alerts_Accounts_Contact__c &gt; 0 || Count_Alerts_Accounts_Only__c  &gt; 0),
  &#39;Active Alert(s): &#39; &amp; IMAGE(&#39;/img/msg_icons/warning16.png&#39;,&#39;&#39;,16,16) &amp; &#39;...&#39;, 
  &#39;&#39;
)

&amp; IF(
  (Phone_on_DNC__pc = TRUE ||
   Home_Phone_on_DNC__pc = TRUE ||
   Mobile_on_DNC__pc = TRUE ||
   Other_Phone_on_DNC__pc ||
   Mobile_on_DNC__pc), 
&#39;DNC: &#39; &amp; IMAGE(&#39;/img/msg_icons/warning16.png&#39;,&#39;&#39;,16,16) &amp; &#39;...&#39;, &#39;&#39;)

&amp;  IF(
    (ISPICKVAL(Channel_Opt_In_Email__pc,&#39;Opt Out&#39;) ||
    ISPICKVAL(Channel_Opt_In_Phone__pc,&#39;Opt Out&#39;) ||
    ISPICKVAL(Channel_Opt_In_SMS__pc,&#39;Opt Out&#39;)),
   &#39;Opt Out: &#39; &amp; IMAGE(&#39;/img/msg_icons/warning16.png&#39;,&#39;&#39;,16,16),
  &#39;&#39;
  )</formula>
    <inlineHelpText>Displays any notifications such as Alerts, DNC, Active Campaigns, or marketing preferences defined for customer.</inlineHelpText>
    <label>Notifications</label>
    <type>Text</type>
</CustomField>