News UAT/force-app/main/default/objects/Account/fields/AdPoint_User_Id__c.field-meta.xml
<CustomField>
    <fullName>AdPoint_User_Id__c</fullName>
    <inlineHelpText>Identify who the owner should be in Adpoint from CRM. This uses the ESUC and updated on Account owner change. 5/3/14 - Webservice will send the owner of Adpoint accounts in Adpoint to be owned by Integration User due to Adpoint license issue.</inlineHelpText>
    <label>AdPoint User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>