News UAT/force-app/main/default/objects/Account/fields/AssistantPhone_DNC_Contactable__c.field-meta.xml
<CustomField>
    <fullName>AssistantPhone_DNC_Contactable__c</fullName>
    <description>This is an exact copy of the AssistantPhone_DNC_Contactable_pc from Contact. 

Reason for the duplication is because Person Contact Formula fields are not accessible from Formulas - e.g. Formula Field, Field Updates (in this case Acct Audit Field Update)</description>
    <formula>AND(NOT(AssistantPhone_on_DNC__pc), 
NOT(ISBLANK(AssistantPhone_DNC_Washed_Date__pc)), 
TODAY() - AssistantPhone_DNC_Washed_Date__pc &lt; 31
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This phone number is contactable if the the number is Not in DNC, has a Wash Date, and the Wash Date is at most 30 days from today</inlineHelpText>
    <label>AssistantPhone DNC Contactable</label>
    <type>Checkbox</type>
</CustomField>