News UAT/force-app/main/default/objects/Account/fields/Community_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Community_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Community Parent Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>