News UAT/force-app/main/default/objects/Account/fields/Consortium_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Current_FY__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Consortium Current FY (Print + Digital + Xtend)</description>
    <inlineHelpText>Consortium Current FY (Print + Digital + Xtend)</inlineHelpText>
    <label>Consortium Current FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>