News UAT/force-app/main/default/objects/Account/fields/Consortium_Previous_FY__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Previous_FY__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Consortium Previous FY (Print + Digital + Xtend)</description>
    <inlineHelpText>Consortium Previous FY (Print + Digital + Xtend)</inlineHelpText>
    <label>Consortium Previous FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>