News UAT/force-app/main/default/objects/Account/fields/Consortium_Total__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Total__c</fullName>
    <description>Consortium Total (Print + Digital + Xtend)</description>
    <inlineHelpText>Consortium Total (Print + Digital + Xtend)</inlineHelpText>
    <label>Consortium Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>