News UAT/force-app/main/default/objects/Account/fields/ConvertFromLeadABN__c.field-meta.xml
<CustomField>
    <fullName>ConvertFromLeadABN__c</fullName>
    <description>Lead Conversion only maps to Custom Account Fields, and cannot map to the AccountNumber field that is being used for DataSAN&#39;s ABN Lookup</description>
    <label>ConvertFromLeadABN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>