News UAT/force-app/main/default/objects/Account/fields/Count_Account__c.field-meta.xml
<CustomField>
    <fullName>Count_Account__c</fullName>
    <description>Set this Account to count 1: Field only used for reporting formula summary fields. This field should not be displayed in any page layouts</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count:Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>