News UAT/force-app/main/default/objects/Account/fields/Count_Alerts_Accounts_Only__c.field-meta.xml
<CustomField>
    <fullName>Count_Alerts_Accounts_Only__c</fullName>
    <inlineHelpText>Do not show on page: To count the # of records ONLY associated to an account and  not against a contact. This rollup summary allows formula fields from contact record to trigger off.</inlineHelpText>
    <label>Count: Alerts Accounts Only</label>
    <summaryFilterItems>
        <field>Alert__c.Is_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Alert__c.Trigger_Account_Only__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Alert__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>