News UAT/force-app/main/default/objects/Account/fields/Count_of_Emailable_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Emailable_Contacts__c</fullName>
    <description>This field contains the count of contacts on this account that have emailable checked.</description>
    <inlineHelpText>This field contains the count of contacts on this account that have emailable checked.</inlineHelpText>
    <label>Count of Emailable Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>