News UAT/force-app/main/default/objects/Account/fields/Created_by_Cirrus_Insight__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Cirrus_Insight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Cirrus Insight</label>
    <type>Checkbox</type>
</CustomField>