News UAT/force-app/main/default/objects/Account/fields/Creative_Agency_AdPoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Creative_Agency_AdPoint_Id__c</fullName>
    <formula>Creative_Agency_For_Digital_Customer__r.AdPoint_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creative Agency AdPoint Id</label>
    <type>Text</type>
</CustomField>