News UAT/force-app/main/default/objects/Account/fields/Creative_Agency_For_Digital_Customer__c.field-meta.xml
<CustomField>
    <fullName>Creative_Agency_For_Digital_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preferred Creative Agency for digital media customer.</inlineHelpText>
    <label>Creative Agency (For Digital Customer)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>It must be an Agency that is Digital (Digital Status is Active)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Digital_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Only Agencies that have been turned Digital is displayed</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Creative Agency (For Digital Customer)</relationshipLabel>
    <relationshipName>Accounts_CreativeAgencyDigital</relationshipName>
    <type>Lookup</type>
</CustomField>