News UAT/force-app/main/default/objects/Account/fields/csb2c__E_Commerce_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>csb2c__E_Commerce_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>E-Commerce Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>