News UAT/force-app/main/default/objects/Account/fields/csb2c__Profile__c.field-meta.xml
<CustomField>
    <fullName>csb2c__Profile__c</fullName>
    <externalId>true</externalId>
    <label>Account profile (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>