News UAT/force-app/main/default/objects/Account/fields/cspmb__Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>cspmb__Discount_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Level</label>
    <referenceTo>cspmb__Discount_Level__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>