News UAT/force-app/main/default/objects/Account/fields/Customer_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount_Percent__c</fullName>
    <formula>IF(ISBLANK(Pre_Discount_Price__c) || (Pre_Discount_Price__c == 0), 0, ROUND((1 - (Rolling_12_Months_Print__c / Pre_Discount_Price__c)) * 100, 0) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Discount Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>