News UAT/force-app/main/default/objects/Account/fields/CustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>CustomerDiscount__c</fullName>
    <description>NextGen</description>
    <label>Customer Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>