News UAT/force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF(IsPersonAccount, 

IF(ISBLANK(FirstName), 0, 40) 
+IF(ISBLANK(PersonMailingStreet), 0, 20) 
+IF(ISBLANK( DPID_Primary_Address__pc ), 0, 10) 
+IF(ISBLANK(PersonEmail), 0, 10) 
+IF(ISBLANK(Phone), 0, 20), 

IF(ABN_Exempt__c == false, 
IF(OR(ISBLANK(AccountNumber),ABN_Status__c != &#39;Active&#39;,ISBLANK( Registered_Name__c )),0,40) 
+IF(ISBLANK(TEXT(Type)),0,10) 
+IF(ISBLANK(Phone), 0, 20) 
+IF(ISBLANK(BillingStreet),0,10) 
+IF(ISBLANK(DPID_Primary_Address__c),0,10) 
+IF(ISBLANK(Industry_Code__c),0,5) 
+IF(ISBLANK(TEXT( Revenue_Group__c )),0,5), 
IF(ISBLANK(TEXT(Type)),0,20) 
+IF(ISBLANK(Phone), 0, 30) 
+IF(ISBLANK(BillingStreet),0,20) 
+IF(ISBLANK(Industry_Code__c),0,15) 
+IF(ISBLANK(TEXT( Revenue_Group__c )),0,15) 
) 
)</formula>
    <label>Account Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>