News UAT/force-app/main/default/objects/Account/fields/datasan__Account_ABN__c.field-meta.xml
<CustomField>
    <fullName>datasan__Account_ABN__c</fullName>
    <label>Account ABN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>