News UAT/force-app/main/default/objects/Account/fields/datasan__Account_ACN__c.field-meta.xml
<CustomField>
    <fullName>datasan__Account_ACN__c</fullName>
    <label>Account ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>