News UAT/force-app/main/default/objects/Account/fields/datasan__Account_Phone_Operator__c.field-meta.xml
<CustomField>
    <fullName>datasan__Account_Phone_Operator__c</fullName>
    <label>Account Phone Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>