News UAT/force-app/main/default/objects/Account/fields/datasan__Account_Phone_Status__c.field-meta.xml
<CustomField>
    <fullName>datasan__Account_Phone_Status__c</fullName>
    <label>Account Phone Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>